[workspace]
resolver = "2"
members = [
  "crates/dq-core",
  "crates/dq-formats",
  "crates/dq-query",
  "crates/dq-merge",
  "crates/dq-terragrunt",
  "crates/dq-scan",
  "crates/dq-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pleme-io/dq"

[workspace.dependencies]
# Core serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
hcl-rs = "0.18"
hcl-edit = "0.9"
serde-saphyr = "0.0.22"
csv = "1"
rmp-serde = "1"

# Query engine (jaq)
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }

# Path-based selection
jsonpath-rust = "1"

# Merge / patch
json-patch = "4"

# Schema
schemars = "1"
jsonschema = "0.30"

# Graph (for dependency DAG)
petgraph = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
indexmap = { version = "2", features = ["serde"] }
