[package]
name = "dq-cli"
description = "Universal infrastructure data query tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dq"
path = "src/main.rs"

[features]
default = []
# Enables `dq verify-mermaid` + `dq -t lisp` / `-f lisp` s-expression
# I/O at the CLI layer. All tatara-lisp access flows through shikumi
# (which already owns the lisp reader/ast path) so dq-cli doesn't
# need a direct dep on tatara-lisp and crate2nix's feature closure
# stays simple.
lisp = [
    "shikumi/lisp",
    "dep:shikumi",
    "dep:serde",
    "dep:sha2",
]

[dependencies]
dq-core = { path = "../dq-core" }
dq-formats = { path = "../dq-formats" }
dq-query = { path = "../dq-query" }
dq-merge = { path = "../dq-merge" }
dq-terragrunt = { path = "../dq-terragrunt" }
dq-scan = { path = "../dq-scan" }
dq-viz = { path = "../dq-viz" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
# Used by tg list --to json to walk the dq-terragrunt DAG and build
# typed records via dq_core::Value.
indexmap = { workspace = true }
petgraph = { workspace = true }

# Lisp-backed verifier (only compiled when `lisp` feature is enabled).
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }
serde = { workspace = true, optional = true }
# SHA-256 for the projection hash — matches the Python pipeline's
# fallback (when blake3 isn't available) so the hashes compare.
sha2 = { version = "0.10", optional = true }
