[package]
name = "dq-core"
description = "Core data structures for universal infrastructure data manipulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
