[package]
name = "dq-formats"
description = "Format detection, parsing, and serialization for dq"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dq-core = { path = "../dq-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
toml = { workspace = true }
hcl-rs = { workspace = true }
csv = { workspace = true }
rmp-serde = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
