[package]
name = "dq-formats"
description = "Format detection, parsing, and serialization for dq"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Pulls tatara-lisp for canonical s-expression IR emission / parsing
# of dq Values. Off by default — tatara-lisp is a monorepo-local
# crate; downstream consumers opt in when they need the Lisp surface.
lisp = ["dep:tatara-lisp"]

[dependencies]
dq-core = { path = "../dq-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
toml = { workspace = true }
hcl-rs = { workspace = true }
csv = { workspace = true }
rmp-serde = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
tatara-lisp = { git = "https://github.com/pleme-io/tatara-lisp", optional = true }
