[package]
name = "dq-scan"
description = "Directory analysis and topology mapping for GitOps infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dq-core = { path = "../dq-core" }
dq-formats = { path = "../dq-formats" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
serde-saphyr = { workspace = true }

[dev-dependencies]
tempfile = "3"
