[package]
name = "dq-terragrunt"
description = "Terragrunt HCL introspection: parse configs, resolve dependencies, build DAGs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dq-core = { path = "../dq-core" }
dq-formats = { path = "../dq-formats" }
dq-merge = { path = "../dq-merge" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
hcl-rs = { workspace = true }

[dev-dependencies]
tempfile = "3"
